# parallax

./: .clang-format  .clang-tidy  .git-commit-template  .gitignore  .gitlab-ci.yml  .gitlint  .lgtm.yml  .mailmap  .pre-commit-config.yaml  BuildInstructions.txt  CMakeLists.txt  CMakePresets.json  CMakeconfig.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  LICENSE  Makefile  README  README.md  Setup.md  USERS.md  condaenv  config.h.in  options.yml  pyrightconfig.json
YCSB-CXX/: CMakeLists.txt  README  a2d.txt  build_config.mk  ep_proposed.txt  execution_plan.txt  execution_plan_a2d.txt  execution_plan_e.txt  generate_workloads.py  load_a.txt  run-ycsb.sh  run_b.txt  run_c.txt  run_d.txt  run_e.txt
YCSB-CXX/core/: AcknowledgedCounterGenerator.hpp  ConstantIntegerGenerator.hpp  CounterGenerator.hpp  DiscreteGenerator.hpp  Generator.hpp  Makefile.old  Measurements.hpp  NumberGenerator.hpp  ScrambledZipfianGenerator.hpp  SkewedLatestGenerator.hpp  UniformLongGenerator.hpp  ZipfianGenerator.hpp  client.h  core_workload.cc  core_workload.h  utils.h  ycsbdb.h
YCSB-CXX/db/: Makefile.old  berkeley_db.h  db_factory.h  db_factory_async_kreonR.cc  db_factory_berkeleydb.cc  db_factory_blocking_kreonR.cc  db_factory_eutropiadb.cc  db_factory_kreonR.cc  db_factory_kyotodb.cc  db_factory_leveldb.cc  db_factory_nulldb.cc  db_factory_parallax.cc  db_factory_perconaft.cc  db_factory_rocksdb.cc  db_factory_tucanaclientdb.cc  eutropia_db.h  kreonR_async_client.h  kreonR_blocking_client.h  kreonR_client.h  kyoto_db.h  level_db.h  null_db.h  parallax_db.h  percona_ft.h  rdma_dummy_client.h  rocks_db.h  tucana_client_db.h  workload_gen.h
YCSB-CXX/driver/: ycsbc.cc
YCSB-CXX/workloads/: workloada  workloadb  workloadc  workloadd  workloade  workloadf
kreon_lib/: CMakeLists.txt  README
kreon_lib/allocator/: allocator.c  allocator.h  allocator_test.c  dmap-ioctl.h  list.c  list.h  mkfs_Eutropia.c  persistent_operations.c  recovery.c
kreon_lib/btree/: assertions.h  btree.c  btree.h  compaction_daemon.c  conf.h  conf.py  delete.c  delete.h  dynamic_leaf.c  dynamic_leaf.h  gc.c  gc.h  replica.c  segment_allocator.c  segment_allocator.h  static_leaf.c  static_leaf.h  stats.h  uthash.h
kreon_lib/microbenchmark/: comp_simple.sh  comp_updates.sh  run-it.sh  setup.sh  simple.cc  updates.cc
kreon_lib/scanner/: min_max_heap.c  min_max_heap.h  scanner.c  scanner.h  stack.c
kreon_rdma/: CMakeLists.txt  Makefile.old  klist.h  memory_region_pool.c  memory_region_pool.h  memory_regions.c  memory_regions.h  rdma.c  rdma.h  test_rdma.c
kreon_server/: CMakeLists.txt  client_regions.c  client_regions.h  client_regions_manager.c  client_scanner.c  client_scanner.h  conf.h  create_region.c  create_regions.c  create_regions.h  create_regions_utils.c  create_regions_utils.h  create_server_node.c  djb2.c  djb2.h  globals.c  globals.h  hash.c  initial_create_regions.c  initial_create_regions.h  messages.c  messages.h  metadata.h  metadata_server.c  modulos  modulos.sh  network_data.c  network_data.h  network_data_client.c  network_data_client.h  network_data_server.c  network_data_server.h  only_conn.c  pre_only_conn.c  prototype.h  regions.c  regions.h  regions_manager.c  replica_utilities.c  replica_utilities.h  (+19 more)
lib/: CMakeLists.txt
lib/allocator/: allocator.c  allocator.h  device_structures.h  djb2.c  djb2.h  dmap-ioctl.h  kv_format.c  kv_format.h  log_structures.c  log_structures.h  lsn.c  lsn.h  mem_structures.h  mkfs_Eutropia.c  mkfs_parallax.c  persistent_operations.c  persistent_operations.h  recovery.c  redo_undo_log.c  redo_undo_log.h  region_log.c  region_log.h  volume_manager.h  volume_mem_allocator.c
lib/api/: parallax.c
lib/archive/: static_leaf.c  static_leaf.h
lib/btree/: bloom_filter.c  bloom_filter.h  btree.c  btree.h  btree_node.h  compaction_daemon.c  compaction_daemon.h  compaction_worker.c  compaction_worker.h  conf.h  conf.py  delete.c  dev_index.c  dev_index.h  dev_leaf.c  device_level.c  device_level.h  dynamic_leaf.c  dynamic_leaf.h  fractal_index.c  fractal_index.h  fractal_leaf.c  fractal_leaf.h  gc.c  gc.h  index_node.c  index_node.h  key_splice.c  key_splice.h  kv_pairs.c  kv_pairs.h  level_cursor.h  level_read_cursor.c  level_read_cursor.h  level_write_appender.c  level_write_appender.h  level_write_cursor.c  level_write_cursor.h  lsn.c  lsn.h  (+11 more)
lib/common/: common.c  common.h  common_functions.c  common_functions.h  common_macros.h  kv_pairs.c  kv_pairs.h
lib/include/: parallax.h
lib/parallax_callbacks/: parallax_callbacks.c  parallax_callbacks.h
lib/scanner/: L0_scanner.c  L0_scanner.h  max_min_heap.c  max_min_heap.h  min_max_heap.c  min_max_heap.h  scanner.c  scanner.h  scanner_mode.h  stack.c  stack.h
microbenchmarks/: CMakeLists.txt  throughput_bench.c
tests/: CMakeLists.txt  Makefile  allocator_test.c  arg_parser.c  arg_parser.h  generate_cov_report.sh  lookup3.c  lookup3.h  manto.c  readersondirty.c  run_test.sh  simple_test_delete.c  test1.c  test2.c  test_categories.c  test_circular_buffer.c  test_deletes.c  test_dirty_scans.c  test_fractal_layout.c  test_gc.c  test_index_node.c  test_krc_api.c  test_krc_scans.c  test_leaf_node.c  test_leaf_root_delete_get_scan.c  test_level_protocol.c  test_medium.c  test_mixes.c  test_optional_logging.c  test_options.c  test_par_format.c  test_par_put_metadata.c  test_par_put_serialized.c  test_recovery.c  test_redo_undo_log.c  test_region_allocations.c  test_region_log.c  test_region_watchers.c  test_sanitizers.c  test_scans.c  (+11 more)
tests/Surrogates/: CMakeLists.txt  surr_allocator.c  surr_btree.c  surr_dynamic_leaf.c  (+5 more)
tracer/: CMakeLists.txt  README.md  dummy_tracefile.txt  tracefile_checker.py  tracer.c
utilities/: CMakeLists.txt  circular_buffer.c  circular_buffer.h  dgmalloc.c  dgmalloc.h  dups_list.c  dups_list.h  latency_monitor.c  latency_monitor.h  list.c  list.h  macros.h  min_heap.c  min_heap.h  min_max_heap.c  min_max_heap.h  mydgmalloc.h  queue.c  queue.h  rbtree.c  rbtree.h  simple_concurrent_list.c  simple_concurrent_list.h  spin_loop.c  spin_loop.h  stack.h  work_stealing_queue.c  work_stealing_queue.h
(+202 files in other folders)
